[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Nadeemmazahreh <nadeemmazahreh97@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
pandas = "^1.3.2"
keras = "^2.6.0"
jupyterlab = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
